<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/spacing_tiny"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginHorizontal="@dimen/spacing_small"
        app:cardCornerRadius="@dimen/card_radius_small"
        app:strokeWidth="2dp"
        app:strokeColor="@color/deep_blue"
        android:layoutAnimation="@anim/layout_animation"
        android:backgroundTint="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_header"
                android:layout_width="@dimen/toolbar_image_size"
                android:layout_height="@dimen/toolbar_image_size"
                android:padding="@dimen/spacing_tiny"
                android:src="@drawable/github"
                tools:ignore="ContentDescription">
            </ImageView>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_small"
                android:text="@string/app_title"
                android:textSize="@dimen/text_headline"
                android:textColor="@color/deep_blue"
                android:textStyle="bold">
            </TextView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_margin="@dimen/spacing_small"
                android:elevation="3dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/description_fab"
                android:src="@drawable/ic_baseline_search_24"
                app:tint="@color/deep_blue"
                app:borderWidth="0dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <EditText
            android:id="@+id/sv_query_param"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/spacing_small"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="@dimen/spacing_small"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/spacing_small"
            android:textSize="@dimen/text_subtitle"
            android:visibility="gone"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"
            tools:visibility="visible" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_current_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_tiny"
        android:text="@string/current_search"
        android:textColor="@color/prussian_blue"
        android:textSize="@dimen/text_body"
        android:layout_gravity="center" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/cv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_tiny"
        android:layout_marginBottom="@dimen/spacing_tiny">
    </View>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/recyclerview_list_row">
        </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.appcompat.widget.LinearLayoutCompat>